--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -199,7 +199,8 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    return term[0][0]*input_value**term[0]"
+    "    \n",
+    "    return term[0][0]*input_value**term[0][1] + "
    ]
   },
   {
