automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -199,8 +199,8 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    \n",
-    "    return term[0][0]*input_value**term[0][1] + "
+    "    output = term[0][0]*input_value**term[0][1] + \n",
+    "    return output"
    ]
   },
   {
