--- a/index.ipynb
+++ b/index.ipynb
@@ -194,12 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output = list_of_terms[0][0]*input_value**term[0][1] + term[1][0]*input_value**term[1][1]\n",
+    "    output = list_of_terms[0][0]*input_value**list_of_terms[0][1] + list_of_terms[1][0]*input_value**list_of_terms[1][1]\n",
     "    return output"
    ]
   },
