--- a/index.ipynb
+++ b/index.ipynb
@@ -430,7 +430,7 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    func = "
+    "    func = list_of_terms[0][0]*x_value**list_of_terms[0][1] + list_of_terms[1][0]*x_value**list_of_terms[1][1]"
    ]
   },
   {
