automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -432,7 +432,8 @@
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    new_x = x_value + delta_x\n",
     "    func = list_of_terms[0][0]*x_value**list_of_terms[0][1] + list_of_terms[1][0]*x_value**list_of_terms[1][1]\n",
-    "    incr = list_of_terms[0][0]*new_**list_of_terms[0][1] + list_of_terms[1][0]*x_value**list_of_terms[1][1]"
+    "    incr = list_of_terms[0][0]*new_x**list_of_terms[0][1] + list_of_terms[1][0]*new_x**list_of_terms[1][1]\n",
+    "    deriv = (inc)"
    ]
   },
   {
