automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -433,7 +433,7 @@
     "    new_x = x_value + delta_x\n",
     "    func = list_of_terms[0][0]*x_value**list_of_terms[0][1] + list_of_terms[1][0]*x_value**list_of_terms[1][1]\n",
     "    incr = list_of_terms[0][0]*new_x**list_of_terms[0][1] + list_of_terms[1][0]*new_x**list_of_terms[1][1]\n",
-    "    deriv = (inc)"
+    "    deriv = (incr - func)/delta_x"
    ]
   },
   {
