automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,14 +433,26 @@
     "    new_x = x_value + delta_x\n",
     "    func = list_of_terms[0][0]*x_value**list_of_terms[0][1] + list_of_terms[1][0]*x_value**list_of_terms[1][1]\n",
     "    incr = list_of_terms[0][0]*new_x**list_of_terms[0][1] + list_of_terms[1][0]*new_x**list_of_terms[1][1]\n",
-    "    deriv = (incr - func)/delta_x"
+    "    deriv = (incr - func)/delta_x\n",
+    "    return deriv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "delta_f(four_x_plus_fifteen, 2, 1) # 4"
    ]
